@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl
-dnl   Copyright (C) 2009, 2013 Peter Breitenlohner <tex-live@tug.org>
+dnl   Copyright (C) 2009-2015 Peter Breitenlohner <tex-live@tug.org>
 dnl
 dnl   This file is free software; the copyright holder
 dnl   gives unlimited permission to copy and/or distribute it,
@@ -17,9 +17,12 @@ KPSE_COMMON([seetexk])
 
 AC_CONFIG_HEADERS([config.h])
 
-AC_CHECK_SIZEOF([int])
-AC_CHECK_FUNCS([strerror strtod vprintf])
+AC_CHECK_FUNCS([strerror])
 AC_CHECK_HEADERS([errno.h])
+
+AC_TYPE_INT16_T
+AC_TYPE_INT32_T
+AC_TYPE_UINT32_T
 
 KPSE_KPATHSEA_FLAGS
 
